# dataforge-core

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  bitbucket-pipelines.yml  cypress.config.js  importProject.py  install.bat  main.py  mainConfig.py  miniSparky.py  package-lock.json  package.json  pg.py  pyproject.toml
.github/workflows/: build-pg-deploy.yml  cypress-tests.yml  main.yml  pre-release-tests.yml  prod-tests.yml  python-publish.yml
VO/: defaults.yaml  meta.yaml  relations.yaml
VO/outputs/: json.yaml  virtual store.yaml
VO/rule_templates/: author.yaml  dec to int.yaml  i1.yaml
VO/sources/: json schema custom.yaml  json schema.yaml  meta.input.yaml  salesorderdetail.yaml  salesorderheader.yaml  sod custom.yaml  sod none.yaml  sod ts.yaml  store-sub book.yaml  store-sub fruit.yaml  store.yaml  tpch.customer.yaml  tpch.part.yaml
cli/dataforge/: databricks_sql.py  importProject.py  main.py  mainConfig.py  miniSparky.py  pg.py  util.py
cli/dataforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cli/dataforge_core.egg-info/: PKG-INFO  SOURCES.txt
cypress/: README.md  cypress.config.js  cypress.env.json  package-lock.json  package.json
cypress/e2e/: Dataforge_Core_Release.js
cypress/plugins/: index.js
cypress/scripts/: runInteractiveCommand.js
cypress/support/: general_commands.js
database/: build.sh  pg_deploy.sql
database/core/: build.sh
database/schema/: 0 createSchemas.sql  0 createTypes.sql  1 projectTable.sql  10 aggregateTable.sql  12 enrichmentTable.sql  (+16 more)
resources/: log4j2.properties  pg_deploy.sql
(+146 files in other folders)
