[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "dataforge"
version = "0.0.1"
dependencies = [
    "pyyaml",
    "psycopg2-binary",
    "pyspark"
    ]
[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
[project.scripts]
dataforge = "dataforge.main:main"